fixing baseline alignment for post-meta to post-content
git-svn-id: https://git.crowdfave.org/svn/crowdfavorite/code/wp-themes/carrington-personal/trunk@39792 546ca710-db30-0410-8887-d9dd8e66aff0

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -576,7 +576,6 @@ Put post info in an empty left-hand column */
 	font-size: 12px;
 	margin-right: 20px;
 	padding-bottom: 15px;
-	padding-top: 3px;
 	overflow: hidden;
 	text-align: right;
 	width: 120px;
