--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -136,7 +136,7 @@ html.ie7 #nav-main .menu > li {
 /* post-header */
 .post-header {
 	clear: both;
-	margin-bottom: 7px;
+	margin-bottom: 10px;
 	zoom: 1;
 }
 .post-title {
@@ -158,6 +158,9 @@ html.ie7 #nav-main .menu > li {
 }
 
 /* post-media - wraps featured images, gallery, video */
+.post-media {
+	margin: 0 0 10px 0;
+}
 .single .post-media {
 	margin: 20px 0 25px 0;
 }
@@ -168,12 +171,6 @@ html.ie7 #nav-main .menu > li {
 .post-media a img {
 	display: block;
 	border-bottom: 1px solid #fff;
-}
-.home .post-media,
-.archive .post-media {
-	padding-bottom: 2px;
-	padding-right: 0;
-	padding-top: 5px;
 }
 
 /* Post meta
@@ -213,13 +210,12 @@ Put post info in an empty left-hand column */
 	font-size: 12px;
 	margin-right: 20px;
 	padding-bottom: 15px;
-	padding-top: 3px;
 	overflow: hidden;
 	text-align: right;
 	width: 120px;
 }
-.post-header .post-meta {
-	padding-top: 8px;
+.excerpt .post-meta {
+	padding-top: 10px;
 }
 .post-meta p {
 	vertical-align: baseline;
@@ -231,10 +227,6 @@ Put post info in an empty left-hand column */
 .post-meta .post-meta-replies {
 	margin-top: 0;
 }
-.excerpt .post-meta .post-meta-replies {
-	margin: 0 0 0 8px;
-}
-
 .post-meta .post-meta-title {
 	margin: 10px 0 0 0;
 }
